Revision history for Perl extension Authen::Krb5::KDB.

2002/04/22 by <steiner@td.rutgers.edu> (Dave Steiner)

	Release 0.06

2002/04/19 by <steiner@td.rutgers.edu> (Dave Steiner)

	Makefile.PL; KDB_pm.PL
	- new versions of MakeMaker.pm will give any .PL files the
	  target as their first argument.  KDB_pm.PL will use this if
	  given.  To allow this to work, we now put KDB5_UTIL_PATH=
	  before our path argument.

2002/04/18-19 by <steiner@td.rutgers.edu> (Dave Steiner)

	gen_kdb_h.plx
	- Save the distributed KDB_H.pm file as KDB_H.pm.dist if we
	  haven't done so already.

2002/04/18 by <steiner@td.rutgers.edu> (Dave Steiner)

	Makefile.PL
	- finish code to support generation of KDB.pm by KDB_pm.PL
	  from KDB.in.

2002/04/17 by <steiner@td.rutgers.edu> (Dave Steiner)

	KDB/V3.pm
	- add get_attributes method (load :Attributes from KDB_H.pm).
	- use get_attributes in print_principal method.

	KDB/V3.pm; KDB/V4.pm; KDB/V5.pm
	- add documentation for the print_principal, get_attributes, and
	  print_policy methods.

	KDB.pm, KDB.in; Makefile.PL; KDB_pm.PL
	- KDB.pm is now generated by the KDB_pm.PL script which is
	  called during 'perl Makefile.PL'.  KDB.in is now the file to
	  edit.  Moved hard-coded path to kdb5_util to variable and
	  KDB_pm.PL will patch this to include the correct path.
	  To use a non-standard path run something like
	  'perl Makefile.PL KDB5_UTIL_PATH=/usr/local/krb5/sbin'.
	  The default is '/usr/local/sbin'.

2002/04/16 by <steiner@td.rutgers.edu> (Dave Steiner)

	t/v3.t
	- moved checks for principals to t/princ-check.pl

	t/v4.t; t/v5.t
	- explicitly set 'checks' to 1 iff they haven't been set already.
	  This allows us to be loaded from elsewhere with a different
	  check level.
	- moved checks for principals to t/princ-check.pl

	t/princ-check.pl
	- moved all similar code (from v3-5) to check principals to
	  this file.  Now we can just require this file and call a function.
	- added tests for attributes; tl, key and e data

	t/v3-l2.t